# bot-stock-signals

./: .env.example  .gitignore  PROJECT_REPORT.md  PROJECT_REPORT.tex  README.md  docker-compose.yml  references.bib
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  crypto.py  dashboard.py  health.py  news.py  stocks.py
backend/app/engines/crypto_sniper/: README.md  __init__.py  main.py
backend/app/engines/crypto_sniper/config/: __init__.py  crypto_list.py  settings.py
backend/app/engines/crypto_sniper/core/: __init__.py  indicators.py  monitor.py  valuation.py
backend/app/engines/crypto_sniper/data/: alerts.json
backend/app/engines/crypto_sniper/interface/: __init__.py  telegram_bot.py
backend/app/engines/dashboard/: orchestrator.py
backend/app/engines/market_analysis/: analyzer.py
backend/app/engines/news_monitor/: README.md  __init__.py  config.py  fetcher.py  formatter.py  history.py  main.py  monitor.py
backend/app/engines/news_monitor/data/: news_history.json
backend/app/engines/stock_sniper/: PERFORMANCE_REPORT.md  QUICKSTART.md  README.md  __init__.py  main.py
backend/app/engines/stock_sniper/config/: __init__.py  settings.py  tickers.py
backend/app/engines/stock_sniper/core/: __init__.py  safety.py  scanner.py  strategies.py
backend/app/models/: analysis.py  common.py  crypto.py  dashboard.py  news.py  stocks.py
backend/app/services/: agent_orchestrator.py  ai_service.py  alert_store.py  scheduler.py
frontend/: package-lock.json  (+1 more)
(+49 files in other folders)
