[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-signals-backend"
version = "1.0.0"
description = "Backend API for Telegram signal bot"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=21.0.1",
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "schedule>=1.2.0",
    "google-cloud-aiplatform>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
